Finish rough framework of ViewModel and View

--- a/SimpleTetris/View/MainWindow.xaml
+++ b/SimpleTetris/View/MainWindow.xaml
@@ -4,13 +4,86 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SimpleTetris"
+        xmlns:viewModel="clr-namespace:SimpleTetris.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Button Name="ButtonTemp" Grid.ColumnSpan="2" Content="Temp" VerticalAlignment="Center" HorizontalAlignment="Center" Height="100" Width="100" Click="ButtonTemp_Click"/>
+        Title="SimpleTetris" Height="450" Width="800" Background="DarkSlateGray"
+        KeyDown="MainWindow_KeyDown"
+        SizeChanged="MainWindow_SizeChanged"
+        >
+    <Window.Resources>
+        <viewModel:TetrisViewModel x:Key="ViewModel" />
+        <viewModel:BoolVisibilityConverter x:Key="VisibilityConverter" />
+        <Style x:Key="GroupHeaderTextStyle" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Microsoft YaHei UI" />
+            <Setter Property="TextTrimming" Value="WordEllipsis" />
+            <Setter Property="TextWrapping" Value="NoWrap" />
+            <Setter Property="Foreground" Value="Bisque" />
+            <Setter Property="Typography.StylisticSet20" Value="True" />
+            <Setter Property="Typography.DiscretionaryLigatures" Value="True" />
+            <Setter Property="Typography.CaseSensitiveForms" Value="True" />
+            <Setter Property="FontSize" Value="26.667" />
+            <Setter Property="LineStackingStrategy" Value="BlockLineHeight" />
+            <Setter Property="FontWeight" Value="Light" />
+            <Setter Property="LineHeight" Value="30" />
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <TranslateTransform X="-1" Y="6" />
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource ViewModel}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="1" Text="Simple Tetris"
+                       HorizontalAlignment="Left" Margin="35, 15, 0, 0"
+                       FontFamily="Microsoft YaHei UI" FontSize="32" FontWeight="Light"
+                       Foreground="White" />
+        </Grid>
+        <StackPanel Grid.Row="0" HorizontalAlignment="Right" Margin="0, 20, 60, 0">
+            <TextBlock Style="{StaticResource GroupHeaderTextStyle}"
+                       Text="{Binding Path=RowsCleared}"
+                       HorizontalAlignment="Right" Margin="0, 0, 15, 0" />
+        </StackPanel>
+        <Border x:Name="PlayArea" Grid.Row="1" BorderBrush="Blue" BorderThickness="2"
+                CornerRadius="10" Background="Black" Margin="10" Loaded="PlayArea_Loaded">
+            <ItemsControl
+                ItemsSource="{Binding Path=Sprites}"
+                Margin="5">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Background="Black" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+        </Border>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    Opacity="0.9" Background="DarkGray"
+                    Visibility="{Binding Path=GameOver, Converter={StaticResource VisibilityConverter}}">
+            <TextBlock Text="Game Over"
+                       VerticalAlignment="Center"
+                       Opacity="1" Foreground="Yellow"
+                       FontWeight="Bold" FontSize="70" FontFamily="Microsoft YaHei"
+                       Margin="0, 0, 0, 60" />
+            <Button x:Name="BeginButton" Content="START"
+                    HorizontalAlignment="Center"
+                    Background="DarkSlateGray" Foreground="Snow"
+                    FontWeight="Bold" FontSize="30"
+                    Click="BeginButton_Click" />
+        </StackPanel>
+
+        <TextBlock Grid.Row="1" Text="Paused"
+                   VerticalAlignment="Center" HorizontalAlignment="Center"
+                   FontFamily="Microsoft YaHei" FontSize="60"
+                   FontWeight="Bold" FontStyle="Normal"
+                   Foreground="Yellow" Background="DarkGray" Opacity="0.6"
+                   Visibility="{Binding Paused, Converter={StaticResource VisibilityConverter}}" />
     </Grid>
 </Window>
