--- a/SimpleTetris/View/BlockControl.xaml
+++ b/SimpleTetris/View/BlockControl.xaml
@@ -5,8 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SimpleTetris.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="15" d:DesignWidth="15"
+             Width="1"
+             Height="1"
+             >
     <Grid>
-        <Polygon Points="0,0 5,0 5,5 0,5" Fill="Snow" Stroke="Black" Name="StarPolygon"/>
+        <Rectangle Fill="Snow" StrokeThickness="0.2" Stroke="Black" Name="BlockPolygon"/>
     </Grid>
 </UserControl>
