--- a/SimpleTetris/View/MainWindow.xaml
+++ b/SimpleTetris/View/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SimpleTetris"
         xmlns:viewModel="clr-namespace:SimpleTetris.ViewModel"
         mc:Ignorable="d"
-        Title="SimpleTetris" Height="450" Width="800" Background="DarkSlateGray"
+        Title="SimpleTetris" Height="800" Width="600" Background="DarkSlateGray"
         KeyDown="MainWindow_KeyDown"
         SizeChanged="MainWindow_SizeChanged"
         >
@@ -52,8 +52,8 @@
                        Text="{Binding Path=RowsCleared}"
                        HorizontalAlignment="Right" Margin="0, 0, 15, 0" />
         </StackPanel>
-        <Border x:Name="PlayArea" Grid.Row="1" BorderBrush="Blue" BorderThickness="2"
-                CornerRadius="10" Background="Black" Margin="10" Loaded="PlayArea_Loaded">
+        <Border x:Name="PlayArea" Grid.Row="1" Background="Black" Margin="10"
+                Loaded="PlayArea_Loaded">
             <ItemsControl
                 ItemsSource="{Binding Path=Sprites}"
                 Margin="5">
@@ -64,14 +64,15 @@
                 </ItemsControl.ItemsPanel>
             </ItemsControl>
         </Border>
-        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
+        <StackPanel Grid.Row="1" VerticalAlignment="Center"
                     Opacity="0.9" Background="DarkGray"
-                    Visibility="{Binding Path=GameOver, Converter={StaticResource VisibilityConverter}}">
+                    Visibility="{Binding Path=GameOver, Converter={StaticResource VisibilityConverter}}"
+Margin="0,278,0,277">
             <TextBlock Text="Game Over"
                        VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
                        Opacity="1" Foreground="Yellow"
-                       FontWeight="Bold" FontSize="70" FontFamily="Microsoft YaHei"
-                       Margin="0, 0, 0, 60" />
+                       FontWeight="Bold" FontSize="70" FontFamily="Microsoft YaHei" />
             <Button x:Name="BeginButton" Content="START"
                     HorizontalAlignment="Center"
                     Background="DarkSlateGray" Foreground="Snow"
