Finish Tetriminify and add Periotris

--- a/Tetriminify/MainWindow.xaml
+++ b/Tetriminify/MainWindow.xaml
@@ -26,9 +26,9 @@
                 <Label Content="X" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,328,42" Height="25"/>
             </Grid>
         </GroupBox>
-        <TextBlock x:Name="RowTextBlock" Margin="373,20,10,372" Background="LightGray"/>
-        <TextBlock x:Name="TemplateTextBlock" Margin="373,68,10,214" Background="LightGray"/>
-        <TextBlock x:Name="ResultTextBlock" Margin="373,223,10,10" Background="LightGray"/>
+        <TextBlock x:Name="RowTextBlock" Margin="373,20,10,372" Background="LightGray" FontFamily="Consolas" FontSize="14"/>
+        <TextBlock x:Name="TemplateTextBlock" Margin="373,68,10,214" Background="LightGray" FontFamily="Consolas" FontSize="14"/>
+        <TextBlock x:Name="ResultTextBlock" Margin="373,223,10,10" Background="LightGray" FontFamily="Consolas" FontSize="14"/>
         <Button x:Name="GenerateButton" Content="Generate" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="10,223,0,0" Click="GenerateButton_Click"/>
     </Grid>
 </Window>
