--- a/Periotris/View/MainWindow.xaml
+++ b/Periotris/View/MainWindow.xaml
@@ -85,7 +85,7 @@
 
         <TextBlock Grid.Row="1" Text="Paused"
                    VerticalAlignment="Center" HorizontalAlignment="Stretch" TextAlignment="Center"
-                   FontFamily="Microsoft YaHei" FontSize="60"
+                   FontFamily="Microsoft YaHei UI" FontSize="60"
                    FontWeight="Bold" FontStyle="Normal"
                    Foreground="Yellow" Background="DarkGray" Opacity="0.9"
                    Visibility="{Binding Paused, Converter={StaticResource VisibilityConverter}}" />
