--- a/Periotris/View/MainWindow.xaml
+++ b/Periotris/View/MainWindow.xaml
@@ -49,10 +49,15 @@
                        Foreground="White" Visibility="{Binding Path=GameWon, Converter={StaticResource VisibilityConverter}}"/>
         </Grid>
 
-        <TextBlock Grid.Row="0"
-                       Style="{StaticResource GroupHeaderTextStyle}"
+        <StackPanel  Grid.Row="0"
+                     HorizontalAlignment="Right" Margin="0, 20, 30, 0" >
+            <TextBlock Style="{StaticResource GroupHeaderTextStyle}"
                        Text="{Binding Path=ElapsedTime, Converter={StaticResource TimeSpanConverter}}"
-                       HorizontalAlignment="Right" Margin="0, 20, 30, 0" />
+                       TextAlignment="Center"/>
+            <TextBlock Style="{StaticResource GroupHeaderTextStyle}"
+                       Text="{Binding Path=CurrentHighestScore, Converter={StaticResource TimeSpanConverter}}"
+                       TextAlignment="Center"/>
+        </StackPanel>
 
         <Border x:Name="PlayArea" Grid.Row="1" Background="Black" Margin="10"
                 Loaded="PlayArea_Loaded">
@@ -81,6 +86,9 @@
             <CheckBox x:Name="ColorsCheckBox" 
                       HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.TextAlignment="Center"
                       IsChecked="{Binding Path=RenderColors, Mode=TwoWay}" Content="Colors" Padding="4,0,0,0"/>
+            <TextBlock Text="This game is licensed under GNU General Public License version 3. Go to https://github.com/CSharperMantle/CmTetris.git for more information."
+                       TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"
+                       Foreground="White" FontFamily="Microsoft YaHei UI" TextWrapping="Wrap"/>
         </StackPanel>
 
         <TextBlock Grid.Row="1" Text="Paused"
