Reconstruct Periotris/View Rebuilt View using a main Window and several other Pages

--- a/Periotris/View/MainWindow.xaml
+++ b/Periotris/View/MainWindow.xaml
@@ -8,108 +8,8 @@
         mc:Ignorable="d"
         Title="Periotris" Height="600" Width="800" Background="DarkSlateGray"
         MinHeight="420" MinWidth="560"
-        KeyDown="MainWindow_KeyDown"
-        SizeChanged="MainWindow_SizeChanged"
         >
-    <Window.Resources>
-        <viewModel:TetrisViewModel x:Key="ViewModel" />
-        <viewModel:BoolVisibilityConverter x:Key="VisibilityConverter" />
-        <viewModel:TimeSpanStringConverter x:Key="TimeSpanConverter" />
-        <Style x:Key="GroupHeaderTextStyle" TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="Microsoft YaHei UI" />
-            <Setter Property="TextTrimming" Value="WordEllipsis" />
-            <Setter Property="TextWrapping" Value="NoWrap" />
-            <Setter Property="Foreground" Value="Bisque" />
-            <Setter Property="Typography.StylisticSet20" Value="True" />
-            <Setter Property="Typography.DiscretionaryLigatures" Value="True" />
-            <Setter Property="Typography.CaseSensitiveForms" Value="True" />
-            <Setter Property="FontSize" Value="26.667" />
-            <Setter Property="LineStackingStrategy" Value="BlockLineHeight" />
-            <Setter Property="FontWeight" Value="Light" />
-            <Setter Property="LineHeight" Value="30" />
-            <Setter Property="RenderTransform">
-                <Setter.Value>
-                    <TranslateTransform X="-1" Y="6" />
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </Window.Resources>
-    <Grid DataContext="{StaticResource ViewModel}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="80" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="1"
-                       Text="The Periodic Table of Elements"
-                       HorizontalAlignment="Center" Margin="35, 15, 0, 0"
-                       Foreground="White"
-                       FontFamily="Microsoft YaHei UI" FontSize="34" FontWeight="Bold"
-                       Visibility="{Binding Path=GameWon, Converter={StaticResource VisibilityConverter}}"/>
-        </Grid>
-
-        <StackPanel Grid.Row="0"
-                    HorizontalAlignment="Right" Margin="0, 20, 30, 0">
-            <TextBlock Text="{Binding Path=ElapsedTime, Converter={StaticResource TimeSpanConverter}}"
-                       Style="{StaticResource GroupHeaderTextStyle}"
-                       Foreground="Yellow" TextAlignment="Center" FontFamily="Consolas"/>
-            <TextBlock Text="{Binding Path=CurrentHighestScore, Converter={StaticResource TimeSpanConverter}}"
-                       Style="{StaticResource GroupHeaderTextStyle}"
-                       Foreground="White" TextAlignment="Center" FontFamily="Consolas"/>
-        </StackPanel>
-
-        <Border x:Name="PlayArea"
-                Grid.Row="1" Margin="10"
-                Background="Black"
-                Loaded="PlayArea_Loaded">
-            <ItemsControl
-                ItemsSource="{Binding Path=Sprites}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <Canvas Background="Black"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-            </ItemsControl>
-        </Border>
-        <StackPanel Grid.Row="1"
-                    HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                    Opacity="0.9" Background="DarkGray"
-                    Visibility="{Binding Path=GameOver, Converter={StaticResource VisibilityConverter}}">
-            <TextBlock Text="Game End"
-                       VerticalAlignment="Center" HorizontalAlignment="Center"
-                       Opacity="1" Foreground="Yellow"
-                       FontWeight="Bold" FontSize="70" FontFamily="Microsoft YaHei" />
-            <Button x:Name="BeginButton"
-                    Content="Start"
-                    HorizontalAlignment="Center" Padding="3"
-                    Background="DarkSlateGray" Foreground="Snow"
-                    FontWeight="Bold" FontSize="30"
-                    Click="BeginButton_Click"/>
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Center" VerticalAlignment="Center">
-                <CheckBox x:Name="ColorsCheckBox"
-                          Content="Colors"
-                          HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.TextAlignment="Center" Padding="4,0,10,0"
-                          IsChecked="{Binding Path=RenderColors, Mode=TwoWay}"/>
-                <CheckBox x:Name="GridAssistanceCheckBox"
-                          Content="Assistance grid"
-                          HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.TextAlignment="Center" Padding="4,0,10,0"
-                          IsChecked="{Binding Path=RenderGridAssistance, Mode=TwoWay}"/>
-            </StackPanel>
-            <TextBlock Text="This game is licensed under GNU General Public License version 3. Go to https://github.com/CSharperMantle/CmTetris.git for more information."
-                       HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"
-                       Foreground="White" FontFamily="Microsoft YaHei UI" TextWrapping="Wrap"/>
-        </StackPanel>
-
-        <TextBlock Grid.Row="1"
-                   Text="Paused"
-                   VerticalAlignment="Center" HorizontalAlignment="Stretch" TextAlignment="Center"
-                   FontFamily="Microsoft YaHei UI" FontSize="60" FontWeight="Bold" FontStyle="Normal"
-                   Foreground="Yellow" Background="DarkGray" Opacity="0.9"
-                   Visibility="{Binding Paused, Converter={StaticResource VisibilityConverter}}"/>
-    </Grid>
+    <Frame x:Name="MainFrame"
+           HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+           />
 </Window>
